[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/Wallpoet-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="GameOver" type="MarginContainer"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 300.0
margin_bottom = 220.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 300.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewHighScore" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 17.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 6 )
align = 1

[node name="HighScore" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 300.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 4 )
text = "High Score:"
align = 1

[node name="YourScore" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 300.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 5 )
text = "Your Score:"
align = 1

[node name="Options" type="VBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 127.0
margin_right = 300.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="TryAgain" type="Button" parent="VBoxContainer/Options"]
margin_top = 21.0
margin_right = 300.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Try Again"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer/Options"]
margin_top = 48.0
margin_right = 300.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
text = "Quit"
flat = true
[connection signal="button_down" from="VBoxContainer/Options/TryAgain" to="." method="_on_TryAgain_button_down"]
[connection signal="button_down" from="VBoxContainer/Options/Quit" to="." method="_on_Quit_button_down"]
